@@ -483,7 +483,7 @@ PythonEditView::PythonEditView( const QString& file, QWidget* parent, const char
   _textEdit->reparent(hbox, QPoint());
   _lineMarker->show();
   _textEdit->setWordWrap( QTextEdit::NoWrap );
-  setIcon( Gui::BitmapFactory().pixmap("MacroEditor") );
+  setIcon( Gui::BitmapFactory().pixmap("python") );
 
 
   setFocusProxy( _textEdit );
