@@ -32,39 +32,20 @@
 #include <Python.h>
 
 
-/* module functions */
-static PyObject *                                 /* returns object */
-message(PyObject *self, PyObject *args)           /* self unused in modules */
-{                                                 /* args from python call */
-    char *fromPython, result[64];
-    if (! PyArg_ParseTuple(args, "(s)", &fromPython))  /* convert Python -> C */
-        return NULL;                              /* null=raise exception */
-    else {
-        strcpy(result, "Hello, ");                /* build up C string */
-        strcat(result, fromPython);               /* add passed Python string */
-        return Py_BuildValue("s", result);        /* convert C -> Python */
-    }
-}
-
 /* registration table  */
-static struct PyMethodDef hello_methods[] = {
-    {"message", message, 1},       /* method name, C func ptr, always-tuple */
+static struct PyMethodDef _TEMPLATE_methods[] = {
     {NULL, NULL}                   /* end of table marker */
 };
-
-
-
-
 
 
 /* Python entry */
 extern "C" {
 void _TEMPLATE_AppExport init_TEMPLATE_() {
 
-  (void) Py_InitModule("_TEMPLATE_", hello_methods);   /* mod name, table ptr */
-
-  App::GetApplication();
-
+  // ADD YOUR CODE HERE
+  //
+  //
+  (void) Py_InitModule("_TEMPLATE_", _TEMPLATE_methods);   /* mod name, table ptr */
   Base::Console().Log("App_TEMPLATE_ loaded\n");
 
   return;
